syntax = "proto3";

package protocol;

enum MessageType {
  UNKNOWN_MESSAGE_TYPE = 0;
  HEARTBEAT = 1;
  SUBSCRIPTION = 2;
  TOPIC = 3;
}

message MessageHeader {
  MessageType type = 1;
}

message HeartBeatMessage {
  MessageType type = 1;
  double time = 2;
  bytes data = 3;
}

// NOTE: topics is a space separated string in the format specified by Format
message SubscriptionMessage {
    MessageType type = 1;
    bytes topics = 2;
}

message TopicMessage {
    MessageType type = 1;
    uint64 from_alias = 2;
    string topic = 3;
    bytes body = 4;
}
